完全降级为Java17项目
Former-commit-id: 69f7536d6bad21d1dba364e9a3f6cb80965eb37c