@@ -381,7 +381,7 @@ public class PlayerInteractListener implements Listener {
     private long getLastFireballTime(GamePlayer gamePlayer) {
         Player player  = gamePlayer.getPlayer();
         if (player.hasMetadata(fireballCooldownMetadata)) {
-            return player.getMetadata(fireballCooldownMetadata).getFirst().asLong();
+            return player.getMetadata(fireballCooldownMetadata).get(0).asLong();
         }
         return 0L;
     }
